--- a/app/src/main/res/xml/activity_settings.xml
+++ b/app/src/main/res/xml/activity_settings.xml
@@ -77,7 +77,7 @@
 
             />
         <Preference
-            android:key="@string/talk_with_us"
+            android:key="talk_with_us"
             android:summary=" Connect &amp; Info"
             android:title="Talk with us"
 
