--- a/app/src/main/res/layout/activity_locationsetting.xml
+++ b/app/src/main/res/layout/activity_locationsetting.xml
@@ -4,6 +4,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray"
     android:orientation="vertical">
 
     <ScrollView
@@ -13,6 +14,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
             android:layout_height="match_parent">
 
             <android.support.v7.widget.CardView
@@ -25,6 +28,8 @@
                 >
                 <RelativeLayout
                     android:layout_width="match_parent"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
                     android:layout_height="match_parent">
 
 
@@ -53,7 +58,7 @@
                         android:id="@+id/img_device"
                         android:layout_width="match_parent"
                         android:layout_below="@+id/tv_sub_title"
-                        android:layout_height="400dp"
+                        android:layout_height="300dp"
                         android:src="@mipmap/device"/>
 
                     <LinearLayout
@@ -62,7 +67,8 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_marginTop="20dp"
-                        android:gravity="right">
+                        android:gravity="right"
+                        android:layout_marginRight="20dp">
 
 
                         <TextView
@@ -70,8 +76,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="16dp"
+                            android:layout_marginRight="20dp"
                             android:textColor="@color/blue"
-                            android:text="@string/ok"/>
+                            android:text="CANCEL"/>
                         <TextView
                             android:id="@+id/updatebtn"
                             android:layout_width="wrap_content"
@@ -83,7 +90,7 @@
                             android:background="@android:color/transparent"            android:layout_alignParentBottom="true"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="10dp"
-                            android:text="Update" />
+                            android:text="UPDATE" />
 
 
                     </LinearLayout>
