--- a/app/src/main/res/layout/customdialogui.xml
+++ b/app/src/main/res/layout/customdialogui.xml
@@ -1,75 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="12dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_gravity="center"
+    app:cardCornerRadius="30dp"
+    android:background="@color/gray">
 
-    <TextView
+
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_margin="10dp"
-        android:text="Notification"
-        android:textColor="@android:color/black"
-        android:textSize="19dp"
-        android:textStyle="bold" />
+        android:layout_height="350dp"
+        app:cardCornerRadius="15dp"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="10dp"
+        android:layout_centerInParent="true"
+        >
 
-    <CheckedTextView
-        android:id="@+id/text1"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:checkMark="?android:attr/listChoiceIndicatorSingle"
-        android:ellipsize="marquee"
-        android:gravity="center_vertical"
-        android:minHeight="?android:attr/listPreferredItemHeight"
-        android:paddingEnd="7dip"
-        android:paddingStart="12dip"
-        android:text="Sending a notification when receiving new media"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="?android:attr/textColorAlertDialogListItem"
-        android:textSize="14dp" />
-
-    <CheckedTextView
-        android:id="@+id/text2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:checkMark="?android:attr/listChoiceIndicatorSingle"
-        android:ellipsize="marquee"
-        android:gravity="center_vertical"
-        android:minHeight="?android:attr/listPreferredItemHeight"
-        android:paddingEnd="7dip"
-        android:paddingStart="12dip"
-        android:text="Sending new media files notification after every 3 days"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="?android:attr/textColorAlertDialogListItem"
-        android:textSize="14dp" />
-
-    <CheckedTextView
-        android:id="@+id/text3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:checkMark="?android:attr/listChoiceIndicatorSingle"
-        android:ellipsize="marquee"
-        android:gravity="center_vertical"
-        android:minHeight="?android:attr/listPreferredItemHeight"
-        android:paddingEnd="7dip"
-        android:paddingStart="12dip"
-        android:text="None"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="?android:attr/textColorAlertDialogListItem"
-        android:textSize="14dp" />
-
-    <TextView
-        android:id="@+id/cancel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginTop="12dp"
-        android:gravity="right"
-        android:paddingRight="10dp"
-        android:text="CANCEL"
-        android:textColor="#22A8F1" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
-</LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_margin="10dp"
+            android:text="Notification"
+            android:textColor="@android:color/black"
+            android:textSize="19dp"
+            android:textStyle="bold" />
+
+        <CheckedTextView
+            android:id="@+id/text1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="marquee"
+            android:gravity="center_vertical"
+            android:minHeight="?android:attr/listPreferredItemHeight"
+            android:paddingEnd="7dip"
+            android:paddingStart="12dip"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
+            android:drawableRight="@null"
+            android:text="Sending a notification when receiving new media"
+            android:textColor="?android:attr/textColorAlertDialogListItem"
+            android:textSize="14dp" />
+
+        <CheckedTextView
+            android:id="@+id/text2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="marquee"
+            android:gravity="center_vertical"
+            android:minHeight="?android:attr/listPreferredItemHeight"
+            android:paddingEnd="7dip"
+            android:paddingStart="12dip"
+            android:text="Sending new media files notification after every 3 days"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
+            android:drawableRight="@null"            android:textColor="?android:attr/textColorAlertDialogListItem"
+            android:textSize="14dp" />
+
+        <CheckedTextView
+            android:id="@+id/text3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="marquee"
+            android:gravity="center_vertical"
+            android:minHeight="?android:attr/listPreferredItemHeight"
+            android:paddingEnd="7dip"
+            android:paddingStart="12dip"
+            android:text="None"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
+            android:drawableRight="@null"
+            android:textColor="?android:attr/textColorAlertDialogListItem"
+            android:textSize="14dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/update"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="12dp"
+                android:gravity="right"
+                android:layout_marginRight="20dp"
+                android:paddingRight="10dp"
+                android:text="UPDATE"
+                android:textColor="#22A8F1" />
+            <TextView
+                android:id="@+id/cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="12dp"
+                android:gravity="right"
+                android:paddingRight="10dp"
+                android:text="CANCEL"
+                android:textColor="#22A8F1" />
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+
+
+
+
+
+</RelativeLayout>
