--- a/app/src/main/res/layout/tell_a_friend.xml
+++ b/app/src/main/res/layout/tell_a_friend.xml
@@ -6,12 +6,37 @@
     android:layout_height="match_parent"
     android:background="@color/take_a_tour">
 
-    <include layout="@layout/top_tell_a_friend"></include>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="61dp"
+        android:background="@color/yellow_dark">
+        <ImageView
+            android:id="@+id/img_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/ic_arrow_left_solid"
+            android:tint="@android:color/white"
+            android:padding="10dp"/>
+        <TextView
+            android:id="@+id/tv_top_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="16dp"
+            android:text="KeepToo Tell a friend"
+            android:layout_centerInParent="true"
+            android:textColor="@android:color/white"/>
+
+
+    </RelativeLayout>
+
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="61dp">
 
         <LinearLayout
             android:layout_width="match_parent"
