--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -144,6 +144,7 @@
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appbarlayout"
+            android:background="@android:color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true">
@@ -168,7 +169,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginStart="5dp"
-                        android:src="@drawable/ic_left_angle_bracket" />
+                        android:src="@drawable/ic_arrow_left_solid" />
                     <ImageView
                         android:id="@+id/iv_undo"
                         android:layout_width="30dp"
