--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,7 +10,6 @@
         android:id="@+id/viewpagerlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:layout_weight="1">
 
         <com.mobile.dts.helper.ImageViewerPager
@@ -52,8 +50,6 @@
        android:visibility="gone"
        android:layout_marginBottom="180dp"
        >
-
-
 
        <com.theartofdev.edmodo.cropper.CropImageView
            android:id="@+id/cropImageView"
@@ -139,8 +135,7 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
         android:orientation="vertical"
-       >
-
+        >
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appbarlayout"
@@ -148,6 +143,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true">
+
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -205,22 +201,19 @@
 
                         <RelativeLayout
                             android:id="@+id/shareimage"
-
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="right"
                             android:orientation="horizontal">
+
                             <ImageView
                                 android:id="@+id/iimg_share"
                                 android:layout_width="100dp"
                                 android:layout_height="50dp"
                                 android:src="@mipmap/group_2144"
                                 android:tint="@color/blue"
-
                                 android:padding="10dp"
                                 />
-
-
 
                         </RelativeLayout>
 
@@ -231,7 +224,6 @@
                             android:orientation="vertical"
                             android:paddingLeft="20dp"
                             android:paddingRight="20dp"
-
                             >
 
                             <TextView
@@ -244,36 +236,39 @@
                                 android:text="12-02-2019"
                                 android:textColor="@color/white"
                                 android:textSize="@dimen/large_text_size" />
+
+
                             <LinearLayout
                                 android:layout_marginTop="10dp"
                                 android:id="@+id/stopwatchmainly"
-                                android:paddingRight="10dp"
-                                android:paddingLeft="10dp"
-                                android:layout_width="250dp"
+                                android:paddingRight="15dp"
+                                android:paddingLeft="15dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:background="@drawable/curve_black"
-                                android:gravity="center"
+                                android:gravity="center|center_vertical"
                                 android:orientation="horizontal"
                                 >
 
                                 <android.support.v7.widget.AppCompatTextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:fontFamily="sans-serif-smallcaps"
+                                    android:fontFamily="sans-serif"
                                     android:padding="3dp"
                                     android:scaleY="1.2"
                                     android:drawableLeft="@mipmap/icon_timer"
-                                    android:capitalize="none"
                                     android:text="Remaining :"
                                     android:textAlignment="center"
+                                    android:drawablePadding="8dp"
                                     android:textColor="@android:color/white"
+                                    android:gravity="center_vertical"
                                     android:textSize="12sp" />
 
                                 <android.support.v7.widget.AppCompatTextView
                                     android:id="@+id/stopWatch"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:fontFamily="@font/droid_sans_mono"
+                                    android:fontFamily="sans-serif"
                                     android:padding="3dp"
                                     android:scaleY="1.2"
                                     android:textAlignment="center"
@@ -311,7 +306,6 @@
         </android.support.design.widget.AppBarLayout>
 
 
-
         <ImageView
             android:id="@+id/iv_new"
             android:layout_width="50dp"
@@ -321,6 +315,7 @@
             android:src="@mipmap/icon_new"
             android:visibility="gone" />
 
+
         <com.nhaarman.supertooltips.ToolTipRelativeLayout
             android:id="@+id/activity_main_tooltipframelayout"
             android:layout_width="match_parent"
@@ -329,6 +324,7 @@
             android:background="@android:color/transparent"
             android:gravity="start|bottom"
             android:paddingTop="10dp" />
+
 
         <android.support.v7.widget.CardView
             android:id="@+id/card_view"
@@ -342,6 +338,7 @@
             app:cardElevation="2dp"
             app:cardPreventCornerOverlap="false"
             app:contentPadding="0dp">
+
 
             <TextView
                 android:id="@+id/tv_image_indication"
@@ -688,5 +685,217 @@
                 android:textColor="#FFFFFF" />
 
         </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_folder_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/ll_save_actions"
+            android:orientation="vertical"
+            >
+
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/appbarlayout2"
+                android:background="@android:color/black"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true">
+
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar2"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:background="@android:color/black"
+                    app:contentInsetEnd="0dp"
+                    android:alpha="0.75"
+                    app:contentInsetStart="0dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/iv_back2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="10dp"
+                            android:src="@mipmap/back_blue" />
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+
+                            <RelativeLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:id="@+id/iv_new_folder"
+                                    android:layout_width="80dp"
+                                    android:layout_height="50dp"
+                                    android:src="@mipmap/new_folder"
+                                    android:padding="10dp"
+                                    />
+
+                            </RelativeLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:orientation="vertical"
+                                android:paddingLeft="20dp"
+                                android:paddingRight="20dp"
+                                >
+
+                                <TextView
+                                    android:background="@drawable/curve_black"
+                                    android:paddingLeft="20dp"
+                                    android:paddingRight="20dp"
+                                    android:id="@+id/tv_date2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:text="12-02-2019"
+                                    android:textColor="@color/white"
+                                    android:textSize="@dimen/large_text_size" />
+
+
+                                <LinearLayout
+                                    android:layout_marginTop="10dp"
+                                    android:id="@+id/stopwatchmainly2"
+                                    android:paddingRight="15dp"
+                                    android:paddingLeft="15dp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:background="@drawable/curve_black"
+                                    android:gravity="center|center_vertical"
+                                    android:orientation="horizontal"
+                                    >
+
+                                    <android.support.v7.widget.AppCompatTextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:fontFamily="sans-serif"
+                                        android:padding="3dp"
+                                        android:scaleY="1.2"
+                                        android:drawableLeft="@mipmap/icon_timer"
+                                        android:text="Remaining :"
+                                        android:textAlignment="center"
+                                        android:drawablePadding="8dp"
+                                        android:textColor="@android:color/white"
+                                        android:gravity="center_vertical"
+                                        android:textSize="12sp" />
+
+                                    <android.support.v7.widget.AppCompatTextView
+                                        android:id="@+id/stopWatch2"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:fontFamily="sans-serif"
+                                        android:padding="3dp"
+                                        android:scaleY="1.2"
+                                        android:textAlignment="center"
+                                        android:textColor="@android:color/white"
+                                        android:textSize="12sp" />
+
+
+                                </LinearLayout>
+
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+
+                </android.support.v7.widget.Toolbar>
+
+            </android.support.design.widget.AppBarLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/black_with_alpha"
+                android:orientation="vertical"
+                android:paddingStart="40dp"
+                android:paddingEnd="40dp"
+                >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp"
+                        android:layout_centerVertical="true"
+                        android:text="Safe Gallery"
+                        />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/group_folder"
+                        android:layout_alignParentEnd="true"
+                        />
+
+
+                </RelativeLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#B7B7B7"
+                    android:layout_marginTop="5dp"
+                    />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:paddingStart="20dp"
+                    >
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler_folder"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:paddingEnd="80dp"
+                        android:textColor="#00FFEE"
+                        android:textSize="16sp"
+                        android:text="Select a folder to save or open a new folder"
+                        />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
+
+        </LinearLayout>
+
     </RelativeLayout>
+
+
 </FrameLayout>
