--- a/app/src/main/res/layout/folder_item.xml
+++ b/app/src/main/res/layout/folder_item.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:layout_centerVertical="true"
+            android:textColor="#B7B7B7"
             android:text="Safe Gallery"
             />
 
