--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -361,7 +361,6 @@
             android:layout_gravity="center"
             android:alpha="0.75"
             android:background="@android:color/black"
-
             android:gravity="center"
             android:orientation="horizontal"
             android:paddingTop="3dp"
@@ -514,7 +513,6 @@
                     android:layout_width="43dp"
                     android:layout_height="43dp"
                     android:layout_alignParentTop="true"
-
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
                     android:clickable="false"
@@ -692,6 +690,7 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/ll_save_actions"
             android:orientation="vertical"
+            android:visibility="visible"
             >
 
             <android.support.design.widget.AppBarLayout
@@ -708,7 +707,6 @@
                     android:layout_height="120dp"
                     android:background="@android:color/black"
                     app:contentInsetEnd="0dp"
-                    android:alpha="0.75"
                     app:contentInsetStart="0dp">
 
                     <LinearLayout
@@ -721,7 +719,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginStart="10dp"
+                            android:layout_marginStart="5dp"
                             android:src="@mipmap/back_blue" />
 
 
@@ -823,12 +821,14 @@
             </android.support.design.widget.AppBarLayout>
 
             <LinearLayout
+                android:id="@+id/linear_show_folder"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/black_with_alpha"
                 android:orientation="vertical"
                 android:paddingStart="40dp"
                 android:paddingEnd="40dp"
+                android:visibility="visible"
                 >
 
                 <RelativeLayout
@@ -842,6 +842,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:layout_centerVertical="true"
+                        android:textColor="#B7B7B7"
                         android:text="Safe Gallery"
                         />
 
@@ -891,7 +892,79 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/linear_create_folder"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/black_with_alpha"
+                android:orientation="vertical"
+                android:paddingStart="40dp"
+                android:paddingEnd="40dp"
+                android:paddingTop="30dp"
+                android:visibility="gone"
+                >
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/new_folder"
+                    android:textColor="#00FFEE"
+                    />
+
+                <EditText
+                    android:id="@+id/edt_folder_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:textColor="#00FFEE"
+                    android:background="@color/transparent"
+                    android:text="Untitled Folder"
+                    android:hint="Folder name"
+                    />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#00FFEE"
+                    />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal"
+                    android:gravity="end"
+                    >
+
+
+                    <TextView
+                        android:id="@+id/tv_cancel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#00FFEE"
+                        android:textSize="18sp"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:paddingStart="20dp"
+                        android:text="CANCEL"
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_ok"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#00FFEE"
+                        android:textSize="18sp"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:paddingStart="40dp"
+                        android:text="OK"
+                        />
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
