--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,7 +27,8 @@
     <color name="yellow_dark"> #D6B81E</color>
 
 
-    <color name="black_with_alpha">#800A0A0A</color>
+    <color name="black_with_alpha">#400A0A0A</color>
+    <color name="white_with_alpha">#80FFFFFF</color>
 
 
 
