--- a/app/src/main/res/layout/activity_locationsetting.xml
+++ b/app/src/main/res/layout/activity_locationsetting.xml
@@ -42,8 +42,8 @@
                         android:layout_height="wrap_content"
                         android:textSize="16dp"
                         android:padding="20dp"
-
                         android:textStyle="bold"
+                        android:textColor="@android:color/black"
                         android:text="@string/location_activity"/>
                     <TextView
                         android:id="@+id/tv_sub_title"
@@ -52,13 +52,14 @@
                         android:textSize="16dp"
                         android:paddingLeft="20dp"
                         android:layout_below="@+id/tv_title"
-                        android:textStyle="bold"
+                        android:textColor="@android:color/black"
                         android:text="@string/widget_position"/>
                     <ImageView
                         android:id="@+id/img_device"
                         android:layout_width="match_parent"
                         android:layout_below="@+id/tv_sub_title"
                         android:layout_height="300dp"
+                        android:layout_marginTop="10dp"
                         android:src="@mipmap/device"/>
 
                     <LinearLayout
