--- a/app/src/main/res/layout/activity_dts_gallery.xml
+++ b/app/src/main/res/layout/activity_dts_gallery.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -153,15 +153,59 @@
             </androidx.appcompat.widget.Toolbar>
 
         </com.google.android.material.appbar.AppBarLayout>
-        <TextView
+
+
+        <RelativeLayout
             android:id="@+id/nophotosfound"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="No Recent photos found"
-            android:gravity="center"
             android:visibility="gone"
-            android:background="@android:color/white"
-            android:textSize="23dp"/>
+            android:background="@color/gallery_tour_background">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/temp_media_text"
+                android:gravity="center"
+                android:textSize="16dp"
+                android:layout_marginTop="50dp"
+                android:textColor="@android:color/white"
+                />
+
+            <RelativeLayout
+                android:id="@+id/rel_center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@drawable/ic_group_2150">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/white_ring"
+                    android:layout_marginLeft="18dp"
+                    android:layout_marginTop="16dp"
+                    />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/wating_cup"
+                    android:layout_centerInParent="true"/>
+
+            </RelativeLayout>
+
+            <ImageView
+                android:layout_below="@+id/rel_center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_group_1985"/>
+
+
+
+
+        </RelativeLayout>
+
         <TextView
             android:id="@+id/tv_top"
             android:layout_width="match_parent"
@@ -202,7 +246,9 @@
                 android:id="@+id/gv_folder"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+
+                />
 
             <com.nhaarman.supertooltips.ToolTipRelativeLayout
                 android:id="@+id/activity_main_tooltipframelayout"
@@ -215,6 +261,77 @@
                 />
 
         </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/linear_show_folder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingStart="40dp"
+            android:paddingEnd="40dp"
+            android:visibility="gone"
+            >
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:layout_centerVertical="true"
+                    android:textColor="#B7B7B7"
+                    android:text="Safe Gallery"
+                    />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/group_folder"
+                    android:layout_alignParentEnd="true"
+                    />
+
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#B7B7B7"
+                android:layout_marginTop="5dp"
+                />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingStart="20dp"
+                >
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_folder"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:paddingEnd="80dp"
+                    android:textColor="#00FFEE"
+                    android:textSize="16sp"
+                    android:text="Select a folder to save or open a new folder"
+                    />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
@@ -577,15 +694,17 @@
 
     <RelativeLayout
         android:id="@+id/rel_bottom"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
    >
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="85dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/bottom_image"/>
+        android:src="@drawable/bottom_image"
+
+        />
     <RelativeLayout
         android:id="@+id/rel_first_bottom"
         android:layout_width="wrap_content"
@@ -597,7 +716,6 @@
         <ImageView
             android:id="@+id/img_temp"
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:src="@mipmap/sand_clock"
@@ -609,9 +727,6 @@
             android:layout_height="wrap_content"
             android:text="@string/temp"
             android:layout_marginTop="20dp"
-
-
-
             />
 
     </RelativeLayout>
@@ -637,10 +752,8 @@
             android:layout_height="wrap_content"
             android:text="@string/safe"
             android:layout_marginLeft="5dp"
-             android:gravity="center_horizontal"
+            android:gravity="center_horizontal"
             android:layout_marginTop="20dp"
-
-
 
             />
 
