--- a/app/src/main/res/layout/gallery_tour.xml
+++ b/app/src/main/res/layout/gallery_tour.xml
@@ -103,6 +103,7 @@
 
                 />
             <TextView
+                android:id="@+id/may__be_later"
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
                 android:gravity="center"
