--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -157,22 +157,7 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/iv_back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="5dp"
-                        android:src="@drawable/ic_arrow_left_solid" />
-                    <ImageView
-                        android:id="@+id/iv_undo"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:visibility="gone"
-                        android:layout_marginLeft="20dp"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="5dp"
-                        android:src="@mipmap/undo" />
+
 
                     <TextView
                         android:id="@+id/tv_image_name"
@@ -189,21 +174,38 @@
                         android:visibility="gone" />
 
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical">
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-
-                        <RelativeLayout
-                            android:id="@+id/shareimage"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:id="@+id/iv_back"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="right"
-                            android:orientation="horizontal">
-
+                            android:layout_gravity="center"
+                            android:layout_marginStart="5dp"
+                            android:src="@drawable/ic_arrow_left_solid"/>
+                        <ImageView
+                            android:id="@+id/iv_undo"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:visibility="visible"
+                            android:tint="@color/blue"
+                            android:layout_marginLeft="30dp"
+                            android:layout_gravity="center"
+                            android:src="@mipmap/undo"/>
+                        <RelativeLayout
+                            android:id="@+id/shareimage"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="right"
+                            android:clickable="true"
+                            >
                             <ImageView
                                 android:id="@+id/iimg_share"
                                 android:layout_width="100dp"
@@ -212,8 +214,8 @@
                                 android:tint="@color/blue"
                                 android:padding="10dp"
                                 />
-
                         </RelativeLayout>
+                    </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -331,8 +333,8 @@
             android:layout_above="@+id/ll_save_actions"
             android:layout_centerInParent="true"
             android:layout_marginBottom="7dp"
-            app:cardBackgroundColor="#f3f3f3"
-            app:cardCornerRadius="3dp"
+            app:cardBackgroundColor="@android:color/darker_gray"
+            app:cardCornerRadius="10dp"
             app:cardElevation="2dp"
             app:cardPreventCornerOverlap="false"
             app:contentPadding="0dp">
@@ -345,7 +347,7 @@
                 android:paddingHorizontal="@dimen/padding_large"
                 android:paddingVertical="@dimen/padding_small"
                 android:text="@string/image_indication_text"
-                android:textColor="#686868"
+                android:textColor="@android:color/white"
                 android:textSize="@dimen/medium_text_size"
                 android:textStyle="bold" />
         </androidx.cardview.widget.CardView>
@@ -618,6 +620,7 @@
                 android:layout_height="59dp"
                 android:layout_marginStart="3dp"
                 android:layout_marginEnd="3dp"
+                android:visibility="gone"
                 android:background="@drawable/saverippleeffect"
                 android:clickable="true"
                 android:orientation="vertical">
@@ -740,54 +743,75 @@
                         android:alpha="0.75"
                         app:contentInsetStart="0dp">
 
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="horizontal">
+                           >
 
-                            <ImageView
-                                android:id="@+id/iv_back2"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_marginStart="5dp"
-                                android:tint="#00FFEE"
-                                android:src="@drawable/ic_arrow_left_solid"/>
 
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:gravity="center"
+
                                 android:orientation="vertical">
 
-
-                                <RelativeLayout
-                                    android:id="@+id/rel_create_folder"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="end"
-                                    android:clickable="true"
-                                    >
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+                                    <ImageView
+                                        android:id="@+id/iv_back2"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_gravity="center"
+                                        android:layout_marginStart="5dp"
+                                        android:src="@drawable/ic_arrow_left_solid"/>
 
                                     <ImageView
-                                        android:id="@+id/iv_new_folder"
-                                        android:layout_width="80dp"
-                                        android:layout_height="50dp"
-                                        android:src="@mipmap/new_folder"
-                                        android:padding="10dp"
-                                        />
+                                        android:id="@+id/iv_undo1"
+                                        android:layout_width="30dp"
+                                        android:layout_height="30dp"
+                                        android:visibility="visible"
+                                        android:tint="@color/blue"
 
-                                </RelativeLayout>
+                                        android:layout_marginLeft="30dp"
+                                        android:layout_gravity="center"
+                                        android:src="@mipmap/undo"/>
+                                    <RelativeLayout
+                                        android:id="@+id/rel_create_folder"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                       android:gravity="right"
+                                        android:clickable="true"
+                                        >
+
+                                        <ImageView
+                                            android:id="@+id/iv_new_folder"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:src="@mipmap/new_folder"
+                                            android:padding="10dp"
+
+
+                                            />
+
+                                    </RelativeLayout>
+
+
+                                </LinearLayout>
+
+
+
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:gravity="center"
                                     android:orientation="vertical"
-                                    android:paddingLeft="20dp"
-                                    android:paddingRight="20dp"
+
+
                                     >
 
                                     <TextView
@@ -935,7 +959,7 @@
                     android:paddingStart="40dp"
                     android:paddingEnd="40dp"
                     android:paddingTop="30dp"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     >
 
                     <TextView
