--- a/app/src/main/res/layout/adapter_photofolder_header.xml
+++ b/app/src/main/res/layout/adapter_photofolder_header.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="37dp">
+    android:layout_height="37dp"
+    android:gravity="center">
 
     <TextView
         android:id="@+id/headertext"
@@ -9,10 +10,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerInParent="true"
-        android:paddingStart="12dp"
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp"
         android:text="23- oct"
-        android:textColor="#5D5353"
+        android:alpha="0.5"
+        android:paddingTop="5dp"
+        android:textColor="@android:color/white"
+        android:background="@drawable/spread_blue"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:paddingBottom="5dp"
+         />
 
 </RelativeLayout>
