--- a/app/src/main/res/layout/adapter_photosfolder.xml
+++ b/app/src/main/res/layout/adapter_photosfolder.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="3dp"
+
 
             >
 
@@ -28,8 +28,9 @@
                 <ImageView
                     android:id="@+id/iv_folder_thumbnail"
                     android:layout_width="220dp"
-                    android:layout_height="220dp"
+                    android:layout_height="300dp"
                     android:layout_gravity="center"
+                    android:src="@mipmap/device"
                     android:scaleType="centerCrop"
 
                     />
@@ -87,7 +88,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_medium"
+
                 android:orientation="horizontal">
 
                 <LinearLayout
