--- a/app/src/main/res/layout/dialog_widgetsizesetting.xml
+++ b/app/src/main/res/layout/dialog_widgetsizesetting.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
                 android:textColor="@android:color/black"
-                android:text="Widget Size Setting"></TextView>
+                android:text="Widget Size Settings"></TextView>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
