--- a/app/src/main/res/layout/keep_safe_multiple.xml
+++ b/app/src/main/res/layout/keep_safe_multiple.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
 
+
+    >
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
+    android:id="@+id/rl_main">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,6 +63,19 @@
         android:layout_height="wrap_content">
 
     </androidx.recyclerview.widget.RecyclerView>
+    <ProgressBar
+        android:id="@+id/ProgressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="false"
+        android:maxHeight="10dip"
+        android:minHeight="10dip"
+        android:progress="30"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
+        android:layout_below="@+id/recycler_folder"
+        android:progressDrawable="@drawable/greenprogress" />
     <TextView
         android:id="@+id/tv_recent"
         android:layout_width="match_parent"
@@ -66,17 +86,40 @@
         android:layout_marginLeft="130dp"
         android:layout_marginRight="130dp"
         android:gravity="center"
-
+        android:layout_marginTop="20dp"
         android:background="@drawable/blue_center_button"
-        android:layout_below="@id/recycler_folder"/>
+        android:layout_below="@id/ProgressBar"/>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_folder"
-        android:layout_margin="10dp"
+    <ScrollView
         android:layout_below="@+id/tv_recent"
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_folder_images1"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_folder_images"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
 
     <RelativeLayout
 
@@ -128,6 +171,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="center"
+
         android:layout_marginBottom="10dp">
 
         <RelativeLayout
@@ -194,16 +238,135 @@
         android:textSize="15sp"
         android:visibility="gone"/>
 
+
+
+    <LinearLayout
+        android:id="@+id/ll_edit_bottom"
+        android:layout_width="fill_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        android:weightSum="4"
+        android:alpha="0.75"
+        android:gravity="center"
+        android:visibility="gone"
+        android:background="@android:color/black"
+        android:layout_alignParentBottom="true"
+        >
+        <LinearLayout
+            android:id="@+id/ll_export"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:gravity="center">
+
+
+            <ImageView
+                android:id="@+id/button1"
+                android:src="@drawable/ic_export"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_width="wrap_content" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14dp"
+                android:textColor="@color/blue"
+                android:layout_marginTop="-15dp"
+                android:text="Export"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ll_move"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:gravity="center">
+
+
+            <ImageView
+                android:id="@+id/img_move"
+                android:src="@drawable/ic_move_to"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_width="wrap_content" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14dp"
+                android:textColor="@color/blue"
+                android:layout_marginTop="-15dp"
+                android:text="Move to"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ll_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_weight="1">
+
+
+            <ImageView
+                android:id="@+id/button4"
+
+
+                android:src="@drawable/ic_delete_icon"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/gallery_tour_background"
+                android:text="Delete"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ll_magicwand"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_weight="1">
+
+
+            <ImageView
+                android:id="@+id/magicwand"
+
+
+                android:src="@drawable/ic_cancel"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Cancel"/>
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+
     <RelativeLayout
         android:id="@+id/rel_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         android:layout_alignParentBottom="true"
         >
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="85dp"
             android:scaleType="centerCrop"
             android:src="@drawable/bottom_image"/>
         <RelativeLayout
@@ -323,5 +486,84 @@
         </RelativeLayout>
 
     </RelativeLayout>
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="wrap_content"></ProgressBar>
+
+</RelativeLayout>
+    <LinearLayout
+        android:id="@+id/linear_show_folder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingStart="40dp"
+        android:paddingEnd="40dp"
+        android:visibility="gone"
+        >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:layout_centerVertical="true"
+                android:textColor="#B7B7B7"
+                android:text="Safe Gallery"
+                />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/group_folder"
+                android:layout_alignParentEnd="true"
+                />
+
+
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#B7B7B7"
+            android:layout_marginTop="5dp"
+            />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingStart="20dp"
+            >
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_folder_new"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:paddingEnd="80dp"
+                android:textColor="#00FFEE"
+                android:textSize="16sp"
+                android:text="Select a folder to save or open a new folder"
+                />
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
 
 </RelativeLayout>
