--- a/app/src/main/res/layout/safe_setting.xml
+++ b/app/src/main/res/layout/safe_setting.xml
@@ -180,6 +180,7 @@
 
 
                 <TextView
+                    android:id="@+id/txthelp"
                     android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
